Fix wrapping issue

--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ a:hover {
     display: flex;
     justify-content: center;
     gap: 50px;
-    
+    flex-wrap: wrap;
 }
 
 .box {
